# VerifiableProgrammingEnvironments

./: README.md
MetricAgent/: Cargo.toml  README.md
MetricAgent/app/: Cargo.toml
MetricAgent/app/metric/: metric_collector.rs  metric_processor.rs  metric_publisher.rs  mod.rs
MetricAgent/app/src/: main.rs
MetricAgent/enclave/: Cargo.toml
MetricAgent/enclave/src/: lib.rs
